--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -197,6 +197,22 @@
                                             <th>CatModificarEquipoTransporte</th>
                                             <th>CatEliminarEquipoTransporte</th>
                                             <th>CatConsultarEquipoTransporte</th>
+                                            <th>CatInsertarEmpresa</th>
+                                            <th>CatModificarEmpresa</th>
+                                            <th>CatEliminarEmpresa</th>
+                                            <th>CatConsultarEmpresa</th>
+                                            <th>CatInsertarRol</th>
+                                            <th>CatModificarRol</th>
+                                            <th>CatEliminarRol</th>
+                                            <th>CatConsultarRol</th>
+                                            <th>CatInsertarPrecioVentaGas</th>
+                                            <th>CatModificarPrecioVentaGas</th>
+                                            <th>CatEliminarPrecioVentaGas</th>
+                                            <th>CatConsultarPrecioVentaGas</th>
+                                            <th>CatInsertarPrecioVenta</th>
+                                            <th>CatModificarPrecioVenta</th>
+                                            <th>CatEliminarPrecioVenta</th>
+                                            <th>CatConsultarPrecioVenta</th>
                                             <th>Acciones</th>
                                         </tr>
                                     </thead>
@@ -231,6 +247,10 @@
                                             <th>CompraAutorizarOCompra</th>
                                             <th>CompraEntraProductoOCompra</th>
                                             <th>CompraAtiendeServicioOCompra</th>
+                                            <th>CompraCancelaOCompra</th>
+                                            <th>AlmacenActualizaExistencias</th>
+                                            <th>AlmacenVerExistencias</th>
+                                            <th>AlmacenVerMovimientos</th>
                                             <th>Acciones</th>
                                         </tr>
                                     </thead>
@@ -379,7 +399,7 @@
                             </div>
                         </div>
                     </div>
-                }              
+                }
             </div>
         </div>
     </section>
