--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
@@ -63,6 +63,22 @@
 @Html.HiddenFor(m => m.CatModificarEquipoTransporte)
 @Html.HiddenFor(m => m.CatEliminarEquipoTransporte)
 @Html.HiddenFor(m => m.CatConsultarEquipoTransporte)
+@Html.HiddenFor(m => m.CatInsertarEmpresa)
+@Html.HiddenFor(m => m.CatModificarEmpresa)
+@Html.HiddenFor(m => m.CatEliminarEmpresa)
+@Html.HiddenFor(m => m.CatConsultarEmpresa)
+@Html.HiddenFor(m => m.CatInsertarRol)
+@Html.HiddenFor(m => m.CatModificarRol)
+@Html.HiddenFor(m => m.CatEliminarRol)
+@Html.HiddenFor(m => m.CatConsultarRol)
+@Html.HiddenFor(m => m.CatInsertarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatModificarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatEliminarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatConsultarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatInsertarPrecioVenta)
+@Html.HiddenFor(m => m.CatModificarPrecioVenta)
+@Html.HiddenFor(m => m.CatEliminarPrecioVenta)
+@Html.HiddenFor(m => m.CatConsultarPrecioVenta) 
    
 <tr>
     <td>@Model.NombreRol </td>
@@ -71,6 +87,10 @@
     <td>@Html.CheckBoxFor(m => m.CompraAutorizarOCompra)</td>
     <td>@Html.CheckBoxFor(m => m.CompraEntraProductoOCompra)</td>
     <td>@Html.CheckBoxFor(m => m.CompraAtiendeServicioOCompra)</td>
+    <td>@Html.CheckBoxFor(m => m.CompraCancelaOCompra)</td>
+    <td>@Html.CheckBoxFor(m => m.AlmacenActualizaExistencias)</td>
+    <td>@Html.CheckBoxFor(m => m.AlmacenVerExistencias)</td>
+    <td>@Html.CheckBoxFor(m => m.AlmacenVerMovimientos)</td>
   
     <td>
         <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })">
