--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolRequsicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolRequsicion.cshtml
@@ -63,7 +63,27 @@
 @Html.HiddenFor(m => m.CompraAutorizarOCompra)
 @Html.HiddenFor(m => m.CompraEntraProductoOCompra)
 @Html.HiddenFor(m => m.CompraAtiendeServicioOCompra)
-
+@Html.HiddenFor(m => m.CompraCancelaOCompra)
+@Html.HiddenFor(m => m.AlmacenActualizaExistencias)
+@Html.HiddenFor(m => m.AlmacenVerExistencias)
+@Html.HiddenFor(m => m.AlmacenVerMovimientos)
+@Html.HiddenFor(m => m.CatInsertarEmpresa)
+@Html.HiddenFor(m => m.CatModificarEmpresa)
+@Html.HiddenFor(m => m.CatEliminarEmpresa)
+@Html.HiddenFor(m => m.CatConsultarEmpresa)
+@Html.HiddenFor(m => m.CatInsertarRol)
+@Html.HiddenFor(m => m.CatModificarRol)
+@Html.HiddenFor(m => m.CatEliminarRol)
+@Html.HiddenFor(m => m.CatConsultarRol)
+@Html.HiddenFor(m => m.CatInsertarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatModificarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatEliminarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatConsultarPrecioVentaGas)
+@Html.HiddenFor(m => m.CatInsertarPrecioVenta)
+@Html.HiddenFor(m => m.CatModificarPrecioVenta)
+@Html.HiddenFor(m => m.CatEliminarPrecioVenta)
+@Html.HiddenFor(m => m.CatConsultarPrecioVenta)
+ 
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.RequisicionVerRequisiciones)</td>
