--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
 @model  EmpresaModel
-
 @{
     ViewBag.Title = "Index";
 }
+<style>
+    .eliminar {
+    }
+</style>
 
 <!-- Bootstrap Select Css -->
 <link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
@@ -16,6 +19,15 @@
     if (message != '') {
         $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
     }
+    function AsignarEliminar(idEmpresa) {
+        $("#btnEliminar").attr("data-id", idEmpresa);
+    }
+    $(function () {
+        $("#btnEliminar").click(function () {
+            var idEmpresa = $("#btnEliminar").attr("data-id")
+            window.location = window.location.protocol + "//" + window.location.host + "/Empresas/BorrarEmpresa/" + idEmpresa;
+        });
+    });
 </script>
 <!-- Page Loader -->
 <div class="page-loader-wrapper">
@@ -29,38 +41,66 @@
     <section class="content home">
         <div class="container-fluid">
             <div class="block-header">
+                <div class="row clearfix">
+                    <div class="col-lg-5 col-md-5 col-sm-12">
+                        <h2>Gaseras</h2>
+                        <ul class="breadcrumb padding-0">
+                            <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                            <li class="breadcrumb-item">Catálogos</li>
+                            <li class="breadcrumb-item">Gaseras</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="card">
+                    <div class="header">
+                    </div>
                     <div class="body">
                         <div class="row clearfix">
                             <div class="col-sm-3">
-                                <b>Gasera</b>
-                                <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true">
-                                    @foreach (var lst in ViewBag.listaEmpresas)
+                                <div>
+                                    <strong>Gasera</strong>
+                                </div>
+                                @*<select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true">
+                                        @foreach (var lst in ViewBag.listaEmpresas)
+                                        {
+                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                        }
+                                    </select>*@
+                                <div>
+                                    @if (ViewBag.EsAdmin)
                                     {
-                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                        <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                            @foreach (var lst in ViewBag.Empresas)
+                                            {
+                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            }
+                                        </select>
                                     }
-                                </select>
+                                    else
+                                    {
+                                        @ViewBag.Empresas
+                                    }
+                                </div>
                             </div>
                             <div class="col-sm-3">
-                                <b>Estatus</b>
-                                <select name="IdStatus" class="form-control show-tick" data-live-search="true">
+                                <strong>Estatus</strong>
+                                <select name="IdStatus" class="form-control  show-tick" data-live-search="true">
                                     <option value="Enfunciones">En funciones</option>
                                 </select>
                             </div>
+                            @if (ViewBag.EsAdmin)
+                            {
+                                <div class="col-md-6">
+                                    <div> &nbsp;</div>
+                                    <input id="BtnNuevo" type="submit" value="Nueva" class="btn btn-raised btn-primary btn-round float-right" />
+                                </div>
+                            }
                         </div>
-                    </div>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-md-12">
-                        <input id="BtnNuevo" type="submit" value="Nueva" class="btn btn-raised btn-primary float-right" />
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="body">
-                        <div class="row clearfix">
+                        <br />
+                        <div class="row clearfix blockquote blockquote-info btn-round">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="table-responsive">
-                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" name="EmpresasGaseras">
+                                    <table class="table table-striped table-hover" name="EmpresasGaseras">
                                         <thead>
                                             <tr>
                                                 <th>Logo</th>
@@ -100,10 +140,18 @@
                                                             <i class="zmdi zmdi-settings"></i>
                                                             <span class="icon-name"></span>
                                                         </a>
-                                                        <a ID="lbBorrar" href="@Url.Action("BorrarEmpresa", "Empresas", new { id = item.IdEmpresa })">
-                                                            <i class="material-icons">delete</i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
+                                                        @if (ViewBag.EsAdmin)
+                                                        {
+                                                            <a href="#ModalConfirmacion" data-toggle="modal" data-id="@item.IdEmpresa" id="btnok" class="eliminar" onclick="javascript: AsignarEliminar(@item.IdEmpresa)" data-target="#ModalConfirmacion">
+                                                                <i class="material-icons">delete</i>
+                                                                <span class="icon-name"></span>
+                                                            </a>
+
+                                                            @*<a ID="lbBorrar" href="@Url.Action("BorrarEmpresa", "Empresas", new { id = item.IdEmpresa })">
+                                                                    <i class="material-icons">delete</i>
+                                                                    <span class="icon-name"></span>
+                                                                </a>*@
+                                                        }
                                                     </td>
                                                 </tr>
                                             }
@@ -132,4 +180,17 @@
             </div>
         </div>
     </section>
+    <div class="modal fade" id="ModalConfirmacion" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                </div>
+                <div class="modal-footer">
+                    <input type="button" id="btnEliminar" value="Si" class="btn btn-raised btn-primary btn-round waves-effect" />
+                    <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 }
