--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -35,9 +35,7 @@
                             <h2>Requisición</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item active">
-                                    <label id="lblRuta">Requisiciones</label>
-                                </li>
+                                <li class="breadcrumb-item">Requisiciones</li>
                             </ul>
                         </div>                                                            
                     </div>                  
@@ -145,7 +143,7 @@
                                                 @*<dtp:DateTimePicker ID="dtpFechaRequisicionA" CssClass="dataTxt" />*@
                                             </div>
                                             <div class="col-lg-1">
-                                                <button class="btn btn-primary btn-round btn-block text-center" OnClick="btnBuscar_Click">
+                                                <button class="btn btn-primary btn-round btn-block text-center" disabled >
                                                     <i class="material-icons">search</i>
                                                     <span class="icon-name"></span>
                                                 </button>
@@ -154,7 +152,7 @@
                                     </div>
                                     <div class="row clearfix blockquote blockquote-info btn-round">
                                         <div class="table-responsive">
-                                            <table class="table table-hover">
+                                            <table class="table table-striped table-hover">
                                                 <thead>
                                                     <tr>
                                                         <td><strong>Gasera</strong></td>
